--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan Atkins</title>
+    <link rel="stylesheet" href="css/default.css">
 </head>
 <body>
     <h1>Ryan Atkins</h1>
@@ -12,7 +13,7 @@
     <h3><a href="RyanAtkinsResume.pdf">Resume</a></h3>
     <h2>Projects</h2>
     <h2>About</h2>
-    <p></p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis ex totam quidem debitis harum quaerat eveniet, animi illum nemo modi earum, non provident soluta delectus! Tempore modi dolores dolorum illum?</p>
 
 </body>
 </html>
